--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-baiscs",
   "version": "1.0.0",
-  "description": "Some basic ReactJS",
+  "description": "Some Basic ReactJS",
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build": "webpack -d  && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --port 4000",
+    "build": "webpack -d  && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --port 5000",
     "build:prod": "webpack -p  && cp src/index.html dist/index.html"
   },
   "keywords": [
